@@ -8,6 +8,15 @@ mkdir -p build/gdbserver
 rm -f ${rootdir}/logs/gdbserver-build.log
 touch ${rootdir}/logs/gdbserver-build.log
 
+if [ "$(hostname)" = "longley" ]
+then
+    parallel="-j 4"
+    verilator_dir=/opt/verilator
+else
+    parallel="-j $(nproc)"
+    verilator_dir=/usr
+fi
+
 # Model
 
 cd ${rootdir}/ri5cy/verilator-model
@@ -32,7 +41,7 @@ echo -n "Configuring GDBserver..."
 echo "Configuring GDBserver" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
 if ! ${rootdir}/gdbserver/configure \
-     --with-verilator-headers=/opt/verilator/share/verilator/include \
+     --with-verilator-headers=${verilator_dir}/share/verilator/include \
      --with-ri5cy-modeldir=${rootdir}/ri5cy/verilator-model/obj_dir \
      --with-binutils-incdir= \
      --with-gdbsim-incdir= \
@@ -47,7 +56,7 @@ fi
 echo -n "Building GDBserver..."
 echo "Building GDBserver" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
-if ! make -j 4 >> ${rootdir}/logs/gdbserver-build.log 2>&1
+if ! make ${parallel} >> ${rootdir}/logs/gdbserver-build.log 2>&1
 then
     echo "failed"
     exit 1
@@ -58,7 +67,7 @@ fi
 echo -n "Installing GDBserver..."
 echo "Installing GDBserver" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
-if ! make -j 4 install >> ${rootdir}/logs/gdbserver-build.log 2>&1
+if ! make ${parallel} install >> ${rootdir}/logs/gdbserver-build.log 2>&1
 then
     echo "failed"
     exit 1
